# AdpartSim

./: .clang-format  .env  .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt
.github/workflows/: integration_gate.yml
docs/: DEVELOPMENT.md  TUTORIAL.md  USER_GUIDE.md
example/chakra/: 8npus_fullconnected.json
example/testcase/: 16npus_fullconnected.json  8npus_fullconnected.json
example/testcase/workload/: collective_communication.json
include/core/: barrier.h  core.h  helper.h  result.h
include/enum/: accelerator.h  algorithm.h  communication.h  compute.h  enum.h  network.h  strategy.h  task.h  topology.h
include/metadata/: accelerator.h  communicator.h  memory.h  metadata.h  network.h  node.h  strategy.h  switch.h
include/network/: network.h  topology.h
include/node/: accelerator.h  algorithm.h  application.h  communicator.h  node.h
include/strategy/: strategy.h
include/switch/: switch.h
include/task/: communication.h  compute.h  task.h
include/utils/: configuration.h  env.h  json.h  logging.h  path.h  unit.h
script/: cmake_check.sh  draw_result.py  integration_gate.py  setup.sh
src/: main.cc
src/core/: barrier.cc  core.cc  helper.cc  result.cc
src/core/prop/: core.cc  (+1 more)
src/enum/: accelerator.cc  algorithm.cc  communication.cc  compute.cc  enum.cc  network.cc  strategy.cc  task.cc  topology.cc
src/metadata/: accelerator.cc  communicator.cc  memory.cc  metadata.cc  network.cc  node.cc  strategy.cc  switch.cc
src/network/: network.cc  network_ethernet.cc  network_phy.cc
src/node/: node.cc
src/strategy/: strategy.cc  strategy_chakra.cc  strategy_testcase.cc
src/switch/: switch.cc
src/task/: communication.cc  compute.cc  task.cc
src/utils/: configuration.cc  env.cc  json.cc  logging.cc  path.cc  unit.cc
(+41 files in other folders)
